# LibraryManagement

./: .gitignore  CMakeLists.txt
include/: adduser.h  book.h  bookdao.h  bookdetail.h  borrowrecord.h  borrowrecorddao.h  dbutil.h  updatebook.h  user.h  userdao.h  widget.h
resources/: db.sql  dbconfig.ini  remember_me.ini
resources/form/: adduser.ui  bookdetail.ui  updatebook.ui  widget.ui
src/: adduser.cpp  book.cpp  bookdao.cpp  bookdetail.cpp  borrowrecord.cpp  borrowrecorddao.cpp  dbutil.cpp  main.cpp  updatebook.cpp  user.cpp  userdao.cpp  widget.cpp
